Bug 1259495 - Bustage fix: Replace nsIAtom::EqualsUTF8 with nsIAtom::ScriptableEquals. rs=rkent a=Bustage fix CLOSED TREE DONTBUILD